--- a/projects/6_project/index.html
+++ b/projects/6_project/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>project 6 | Xingchao Liu's Homepage</title>
+    <title>project 6 | Xingchao Liu</title>
     <meta name="author" content="Xingchao Liu  ">
     <meta name="description" content="a project with no image">
 
@@ -51,7 +51,7 @@
       <!-- Nav Bar -->
       <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
         <div class="container">
-          <a class="navbar-brand title font-weight-lighter" href="/">Xingchao Liu's Homepage</a>
+          <a class="navbar-brand title font-weight-lighter" href="/">Xingchao Liu</a>
           <!-- Navbar Toggle -->
           <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
