--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
           <div class="clearfix">
             <p>刘星超<br><strong>Ph.D. Student<br><a href="https://www.cs.utexas.edu/" rel="external nofollow noopener" target="_blank">Computer Science Department</a><br><a href="https://www.cs.utexas.edu/" rel="external nofollow noopener" target="_blank">University of Texas at Austin</a></strong><br> <em>E-mail: xcliu (at) utexas (dot) edu</em></p>
 
-<p>I am currently a final-year Ph.D. student, advised by <a href="https://www.cs.utexas.edu/~lqiang/" rel="external nofollow noopener" target="_blank">Prof. Qiang Liu</a>. Prior to that, I graduated from Beihang University with a bachelor’s degree in Electrical Engineering. In 2018, I worked with <a href="http://ai.ucsd.edu/~haosu/" rel="external nofollow noopener" target="_blank">Prof. Hao Su</a> at UC San Diego.
+<font color="FF1493">I'm actively looking for full-time research job on generative AI. Feel free to email me to chat about future.</font>
+
+<p>I am currently a final-year Ph.D. student, advised by <a href="https://www.cs.utexas.edu/~lqiang/" rel="external nofollow noopener" target="_blank">Prof. Qiang Liu</a>. Prior to that, I graduated from Beihang University with a bachelor’s degree in Electrical Engineering. In 2018, I worked with <a href="http://ai.ucsd.edu/~haosu/" rel="external nofollow noopener" target="_blank">Prof. Hao Su</a> at UC San Diego. I also interned at ByteDance and <a href="https://www.helixon.com/" rel="external nofollow noopener" target="_blank">Helixon</a>.
 My research interests span across various domains in machine learning, with a particular focus on probabilistic inference, generative modeling and their practical applications.</p>
 
 <div style="margin-bottom: 10px; margin-top: 10px; overflow: hidden; background-color: #384259; border-color: #f0f5f9; padding: 15px; border: 4px solid transparent; border-radius: 4px;"> <b>Note:</b> Recently, I have been exploring on a novel technique called <a href="https://arxiv.org/pdf/2209.03003.pdf" rel="external nofollow noopener" target="_blank">Rectified Flow</a> for distribution matching. Rectified Flow offers several intriguing features:<br>
@@ -202,6 +204,7 @@ My research interests span across various domains in machine learning, with a pa
             <a href="https://openreview.net/pdf?id=XVjTT1nw5z" class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener" target="_blank">PDF</a>
             <a href="https://www.cs.utexas.edu/%C2%A0lqiang/rectflow/html/intro.html" class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener" target="_blank">Blog</a>
             <a href="https://github.com/gnobitab/RectifiedFlow" class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener" target="_blank">Code</a>
+            <a href="/assets/pdf/1018_rf_talk.pdf" class="btn btn-sm z-depth-0" role="button">Slides</a>
           </div>
           
           <div class="badges">
