--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="clearfix">
             <p>刘星超<br><strong>Ph.D. Student<br><a href="https://www.cs.utexas.edu/" rel="external nofollow noopener" target="_blank">Computer Science Department</a><br><a href="https://www.cs.utexas.edu/" rel="external nofollow noopener" target="_blank">University of Texas at Austin</a></strong><br> <em>E-mail: xcliu (at) utexas (dot) edu</em></p>
 
-<font color="FF1493">I'm actively looking for full-time research job on generative AI. Feel free to email me to chat about future.</font>
+<font color="FF1493">I'm actively looking for full-time research job on generative AI.<br>Feel free to email me to chat about future.</font>
 
 <p>I am currently a final-year Ph.D. student, advised by <a href="https://www.cs.utexas.edu/~lqiang/" rel="external nofollow noopener" target="_blank">Prof. Qiang Liu</a>. Prior to that, I graduated from Beihang University with a bachelor’s degree in Electrical Engineering. In 2018, I worked with <a href="http://ai.ucsd.edu/~haosu/" rel="external nofollow noopener" target="_blank">Prof. Hao Su</a> at UC San Diego. I also interned at ByteDance and <a href="https://www.helixon.com/" rel="external nofollow noopener" target="_blank">Helixon</a>.
 My research interests span across various domains in machine learning, with a particular focus on probabilistic inference, generative modeling and their practical applications.</p>
